--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Matheus Henrique
           </h1>
           <h3>
-            Estudante do Ensino Fundamental #imersaodev
+            Estudante do Ensino Superior - FATEC Cotia - Desenvolvimento de Software Multiplataforma<br>#imersaodev
           </h3>
         </div>
       </div>
